[gd_scene load_steps=13 format=2]

[ext_resource path="res://4 - Resources/UI/pause.tres" type="Texture" id=1]
[ext_resource path="res://4 - Resources/UI/play.tres" type="Texture" id=2]
[ext_resource path="res://4 - Resources/UI/speed.tres" type="Texture" id=3]
[ext_resource path="res://4 - Resources/UI/pausepressed.tres" type="Texture" id=4]
[ext_resource path="res://4 - Resources/UI/playpressed.tres" type="Texture" id=5]
[ext_resource path="res://4 - Resources/UI/speedpressed.tres" type="Texture" id=6]
[ext_resource path="res://2 - Scripts/UI/SpeedController.gd" type="Script" id=7]
[ext_resource path="res://4 - Resources/DungeonFont.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://2 - Scripts/Clock.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "flash"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.188235, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.188235, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="SpeedController" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_right = 182.0
margin_bottom = 131.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 120.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.196078, 0.196078, 0.196078, 0.941176 )

[node name="Buttons" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -8.0
custom_constants/separation = 12
alignment = 1

[node name="PauseButton" type="TextureButton" parent="ColorRect/Buttons"]
margin_left = 8.0
margin_right = 72.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="PlayButton" type="TextureButton" parent="ColorRect/Buttons"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
disabled = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="SpeedButton" type="TextureButton" parent="ColorRect/Buttons"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -164.0
margin_right = 164.0
margin_bottom = 40.0
color = Color( 0.196078, 0.196078, 0.196078, 0.941176 )

[node name="Label" type="Label" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Day 1: 00:00"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect2/Label"]
anims/RESET = SubResource( 2 )
anims/flash = SubResource( 3 )

[node name="Clock" type="Timer" parent="."]
pause_mode = 1
one_shot = true
autostart = true
script = ExtResource( 9 )

[connection signal="timeout" from="Clock" to="." method="_on_clock_tick"]
